Project2/k8s/auctionservice.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-deployment
spec:
  selector:
    matchLabels:
      app: Auction_Service
  template:
    metadata:
      labels:
        app: Auction_Service
    spec:
      containers:
        - name: auctionservice
          image:  leeperry/g3p2-auction:latest
          ports:
            - containerPort: 8080
