Project2/k8s/auctionservice.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-service
spec:
  type: NodePort
  ports:
    - port: 80 # used by other pods
      targetPort: 8080 # port exposed on the container
      protocol: TCP
  selector:
    app: Auction_Service
